--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_color">#FFFFF38B</color>
+    <color name="component_color">#FFFFE715</color>
+    <color name="text_color">#FF1B212D</color>
 </resources>
