--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -130,16 +130,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/component_color">
-
-                <ImageView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/detail_activity_recommand_ic"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    app:cardCornerRadius="100dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf = "@id/detail_activity_list_contents"
                     app:srcCompat="@tools:sample/avatars" />
+                </androidx.cardview.widget.CardView>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
