completed : activity_sign_in.xml activity_sign_up.xml strings.xml 에 용도에 따른 xml 정리해서 모아놓음 TODO: (더 섬세한 디자인 나중에 추후에 수정)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="background_color">#FFFFF38B</color>
     <color name="component_color">#FFFFE715</color>
     <color name="text_color">#FF1B212D</color>
+    <color name="red">#FF0000</color>
 </resources>
