--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -28,12 +28,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:text="@string/detail_activity_edit"
-            android:textColor="@color/blue"
+            android:textColor="@drawable/selector_edit_button_txt"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -106,58 +107,14 @@
         android:layout_height="match_parent"
         android:background="@color/background_color">
 
+
         <LinearLayout
+            android:id="@+id/post_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/detail_activity_list_img"
-                android:layout_width="match_parent"
-                android:layout_height="209dp"
-                app:srcCompat="@tools:sample/avatars" />
 
-            <TextView
-                android:id="@+id/detail_activity_list_contents"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text=" Lorem Ipsum."
-                android:textSize="20sp" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/component_color">
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/detail_activity_recommand_ic"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    app:cardCornerRadius="100dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent">
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf = "@id/detail_activity_list_contents"
-                    app:srcCompat="@tools:sample/avatars" />
-                </androidx.cardview.widget.CardView>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" Lorem Ipsum."
-                    app:layout_constraintStart_toEndOf="@id/detail_activity_recommand_ic"
-                    app:layout_constraintTop_toTopOf="@id/detail_activity_recommand_ic"
-                    app:layout_constraintBottom_toBottomOf="@id/detail_activity_recommand_ic"
-                    android:layout_marginStart="5dp"
-                    android:textSize="16sp"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
 
