--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -106,6 +106,8 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/profile_img"
+                android:scaleType="centerCrop"
+                android:clipToOutline="true"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 tools:srcCompat="@tools:sample/avatars" />
