--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -24,10 +24,20 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="50dp"
             android:text=" Lorem Ipsum."
+            android:maxLines="2"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/show_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/show_more"
+            android:layout_marginTop="5dp"
+            app:layout_constraintStart_toEndOf="@id/detail_activity_list_contents"
+            app:layout_constraintTop_toTopOf="@id/detail_activity_list_contents"
+            app:layout_constraintBottom_toBottomOf="@id/detail_activity_list_contents"/>
 
         <ImageView
             android:id="@+id/like_button"
@@ -75,6 +85,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/img_cat1"
+                android:scaleType="centerCrop"
+                android:clipToOutline="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/detail_activity_list_contents" />
         </androidx.cardview.widget.CardView>
