--- a/app/src/main/res/layout/activity_choose_profile.xml
+++ b/app/src/main/res/layout/activity_choose_profile.xml
@@ -212,7 +212,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:background="@color/component_color"
-        android:text="다음"
+        android:text="회원가입"
         android:textColor="@color/text_color"
         android:textSize="20sp"
         android:textStyle="bold"
