--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.TeamSns" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.TeamSns" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:textColorPrimary">@color/text_color</item>
     </style>
