--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="@string/empty_id_message"
+        android:text=""
         android:textColor="@color/red"
         app:layout_constraintStart_toStartOf="@+id/et_id"
         app:layout_constraintTop_toBottomOf="@+id/et_id"
@@ -86,7 +86,7 @@
         android:id="@+id/error_text_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/password_error_message"
+        android:text=""
         android:textColor="@color/red"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
